--- a/src/Finances.WinClient/Views/BankAccountElsewhere.xaml
+++ b/src/Finances.WinClient/Views/BankAccountElsewhere.xaml
@@ -4,11 +4,20 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Finances.WinClient.Views"
-             mc:Ignorable="d" >
+             mc:Ignorable="d"
+            d:DataContext="{d:DesignData Source=/DesignTimeData/BankAccount.xaml}">
     <Grid>
-        <StackPanel Orientation="Horizontal">
-            <Image Source="/Images/Conditions_5855.png" VerticalAlignment="Center"/>
-            <TextBlock Text="Elsewhere" Foreground="ForestGreen" Padding="2,0,0,0" VerticalAlignment="Center"/>
+        <StackPanel Orientation="Vertical">
+            <Grid Visibility="{Binding Path=., Converter={StaticResource AccountElsewhereToCollapsedConverter}}">
+                <local:BankAccountView DataContext="{Binding}"/>
+                <!--<StackPanel Orientation="Horizontal">
+                    <ContentPresenter Content="{Binding Bank}" ContentTemplate="{StaticResource BankDataTemplate}"/>
+                    <TextBlock Text="{Binding AccountName}" Padding="5,0,0,0" VerticalAlignment="Center"/>
+                </StackPanel>-->
+            </Grid>
+            <Grid Visibility="{Binding Path=., Converter={StaticResource AccountElsewhereToVisibileConverter}}">
+                <local:ElsewhereBankAccount/>
+            </Grid>
         </StackPanel>
     </Grid>
 </UserControl>
