--- a/src/Finances.WinClient/Views/BankView.xaml
+++ b/src/Finances.WinClient/Views/BankView.xaml
@@ -5,7 +5,16 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Finances.WinClient.Views"
              mc:Ignorable="d"
-             d:DataContext="{d:DesignData Source=/DesignTimeData/Bank.xaml}">
+             xmlns:dd="clr-namespace:Finances.WinClient.DesignTimeData"
+    d:DataContext="{d:DesignInstance Type=dd:Bank,IsDesignTimeCreatable=True}"
+
+    >
+    <!--d:DataContext="{d:DesignData Source=/DesignTimeData/Bank.xaml}"-->
+
+    <!--d:DataContext="{d:DesignInstance Type=dd:Bank,IsDesignTimeCreatable=True}"-->
+
+    <!--d:DataContext="{Binding Path=., Source={x:Static dd:DesignData.BankAccount}}"-->
+
     <Grid>
         <Border BorderThickness="1" BorderBrush="DarkCyan" CornerRadius="2" Padding="1">
             <StackPanel Orientation="Horizontal">
