--- a/src/Finances.WinClient/Views/BankView.xaml
+++ b/src/Finances.WinClient/Views/BankView.xaml
@@ -6,8 +6,7 @@
              xmlns:local="clr-namespace:Finances.WinClient.Views"
              mc:Ignorable="d"
              xmlns:dd="clr-namespace:Finances.WinClient.DesignTimeData"
-    d:DataContext="{d:DesignInstance Type=dd:Bank,IsDesignTimeCreatable=True}"
-
+            d:DataContext="{Binding Path=., Source={x:Static dd:DesignData.Bank}}"
     >
     <!--d:DataContext="{d:DesignData Source=/DesignTimeData/Bank.xaml}"-->
 
