--- a/src/Finances.WinClient/AppResourceDictionary.xaml
+++ b/src/Finances.WinClient/AppResourceDictionary.xaml
@@ -2,23 +2,15 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="ResourceDictionaries\Converters.xaml" />
-        <ResourceDictionary Source="ResourceDictionaries\DataTemplates.xaml" />
-        <ResourceDictionary Source="ResourceDictionaries\Validation.xaml" />
-        <ResourceDictionary Source="ResourceDictionaries\ViewModelMappings.xaml" />
 
-        <!--<ResourceDictionary Source="pack://application:,,,/Finances.Core.Wpf;component/ViewModelMappings.xaml" />-->
-        
-        <ResourceDictionary Source="/Finances.Core.Wpf;component/ViewModelMappings.xaml" />
-
-    </ResourceDictionary.MergedDictionaries>
-
+    <!--<Style TargetType="{x:Type Button}">
+        <Setter Property="Background" Value="Green" />
+    </Style>-->
 
 
     <!--Global Styles-->
     
-    <Style TargetType="{x:Type Control}">
+    <!--<Style TargetType="{x:Type Control}">
         <Setter Property="BorderThickness" Value="1"/>
 
         <Style.Triggers>
@@ -28,19 +20,21 @@
             </Trigger>
         </Style.Triggers>
 
-    </Style>
+    </Style>-->
 
     
-    <Style TargetType="Button">
-        <Setter Property="Padding" Value="5,0"/>
+    <Style TargetType="Button"
+           BasedOn="{StaticResource {x:Type Button}}"
+           >
+        <!--<Setter Property="Padding" Value="5,0"/>-->
         <Setter Property="FontSize" Value="14"/>
     </Style>
-    
-    <Style TargetType="Button"
-           x:Key="Button.HorizontalStack"
+
+    <Style x:Key="Button.HorizontalStack"
+           TargetType="Button"
            BasedOn="{StaticResource {x:Type Button}}">
         <Setter Property="Margin" Value="0,0,5,0"/>
     </Style>
-    
-    
+
+
 </ResourceDictionary>
