--- a/src/Finances.WinClient/Views/BankAccountEditorView.xaml
+++ b/src/Finances.WinClient/Views/BankAccountEditorView.xaml
@@ -24,7 +24,7 @@
                 <Setter Property="VerticalContentAlignment" Value="Center" />
                 <!--<Setter Property="Height" Value="25" />-->
             </Style>
-            <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type Control}}" >
+            <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}" >
                 <Setter Property="Background" Value="Beige" />
                 <!--<Setter Property="Height" Value="25" />-->
                 <!--<Setter Property="Width" Value="350" />-->
@@ -32,7 +32,7 @@
                 <Setter Property="VerticalContentAlignment" Value="Center" />
                 <Setter Property="Validation.ErrorTemplate" Value="{StaticResource validationTemplate}" />
             </Style>
-            <Style TargetType="ComboBox" BasedOn="{StaticResource {x:Type Control}}">
+            <Style TargetType="ComboBox" BasedOn="{StaticResource {x:Type ComboBox}}">
                 <Setter Property="Background" Value="Beige" />
                 <!--<Setter Property="Height" Value="25" />-->
                 <Setter Property="Width" Value="350" />
