--- a/src/Finances.WinClient/App.xaml
+++ b/src/Finances.WinClient/App.xaml
@@ -1,6 +1,7 @@
-﻿<Application x:Class="Finances.WinClient.App"
+﻿<Application
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2" x:Class="Finances.WinClient.App"
              >
     <Application.Resources>
         <ResourceDictionary>
