--- a/src/Finances.WinClient/AppWindow.xaml
+++ b/src/Finances.WinClient/AppWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Finances"
-        Icon="/Images/Money.png"
+        Icon="Images\Money.ico"
         Height="350" 
         Width="525">
     <ContentControl Content="{Binding}" />
